--- a/extrastyles1.css
+++ b/extrastyles1.css
@@ -1,18 +1,18 @@
 .infotext
 {
 	font-family: "Verdana", Sans-serif;
-	font-size: 10px !important;
+	font-size: 10px;
 	padding: 4px;
 }
 .infotext span
 {
 	font-family: "Verdana", Sans-serif;
-	font-size: 10px !important;
+	font-size: 10px;
 	font-weight: bold;
 }
 .infohead
 {
-	font-size: 14px !important;
+	font-size: 14px;
 	font-family: Serif;
 	font-weight: bold;
 	background-color: #f1f1f1;
