--- a/extrastyles2.css
+++ b/extrastyles2.css
@@ -32,7 +32,40 @@
 
 .pokebox
 {
+	background-color: #ffeca9;
+	width: 200px;
+	text-align: center;
 	font-size: 12px;
 }
 
+.pokebox img
+{
+	height: 160px;
+	width: 160px;
+}
 
+.pokebox img, p
+{
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 0px;
+	margin-bottom: 0px;
+}
+
+.romancebox
+{
+	margin: 10px;
+	padding: 0;
+	height: 230px;
+	width: 430px;
+}
+.plusbox 
+{padding-top: 75px;
+font-weight: bold;
+font-size: 40px;}
+
+.romancebox .pokebox, .plusbox
+{float: left;}
+.romancebox span
+{margin-left:40px;
+font-weight: bold;}
