--- a/showstyle.css
+++ b/showstyle.css
@@ -46,6 +46,18 @@ display: inline-block;
 text-align: center;
 }
 
+.lowerhalf
+{
+position:relative;
+height:100px;
+width: 50%;
+margin: 0;
+padding: 10px;
+max-height: 600px;
+display: inline-block;
+text-align: center;
+background-color: #f1f1f1;
+}
 
 nav a:hover
 {
