minor changes. exported urls to secret for portability

--- a/extrastyles1.css
+++ b/extrastyles1.css
@@ -101,3 +101,9 @@ text-align: left;}
 	display: inline-block;
 	float: right;
 }
+
+.leftbottombutton
+{
+	display: inline-block;
+	float: left;
+}
