--- a/showstyle.css
+++ b/showstyle.css
@@ -38,9 +38,11 @@ background-color:pink;
 {
 position:relative;
 height:100%;
-width: 50%;
+width: 500px;
 margin: 0;
 padding: 10px;
+margin-left: auto;
+margin-right: auto;
 max-height: 600px;
 display: inline-block;
 text-align: center;
