--- a/movetable.css
+++ b/movetable.css
@@ -1,14 +1,14 @@
-table
+#summarybox
 {
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 20px;
 	border: 1px solid black;
 	border-spacing: 30px 10px;
-	width: 600px;
+	width: 500px;
 	font-size: x-large;
 }
-th
+#summarybox th
 {
 	vertical-align: top;
 }
