--- a/smallmovetable.css
+++ b/smallmovetable.css
@@ -2,12 +2,11 @@
 margin: auto;
 width: 420px;}
 
-table{border-collapse: collapse;}
-
 #fixed_table{
 background-color: gray;
 width: 418px;
-margin-top: 10px;}
+margin-top: 10px;
+border-collapse: collapse;}
 
 #fixed_table thead tr th
 {border: 1px solid black;
@@ -22,6 +21,7 @@ max-height: 455px;
 overflow-y: scroll;
 overflow-x: hidden;
 border-bottom: 1px solid black;
+border-collapse: collapse;
 }
 
 #scroll_table tbody tr td{
